forecast cards are hidden by default in style.css added acceptence criteria to README added some comments to explain some of the HTML added div for displaying past searched cities, not implemented yet manually added elements to the card group before it would add more cards, this way it just replaces the data from before added comments to explain most of the JS added variables so that you could run the search multiple times and get the correct info removed old uncessary code

--- a/style.css
+++ b/style.css
@@ -13,3 +13,7 @@ header{
     max-width: 250px;
     min-height: 100vh;
 }
+
+#forecast{
+    display: none;
+}
